# zenith

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  log.rs  types.rs
crates/launch/: Cargo.toml
crates/launch/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: auth.rs  lib.rs  mojang.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  theme.rs
scripts/: bundle.sh
