[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/net",
    "crates/store",
    "crates/launch",
    "crates/ui",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
zip = "2"
md5 = "0.7"
sheen = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

# internal crates
zenith-core = { path = "crates/core" }
zenith-net = { path = "crates/net" }
zenith-store = { path = "crates/store" }
zenith-launch = { path = "crates/launch" }
zenith-ui = { path = "crates/ui" }
