[package]
name = "zenith-launch"
version.workspace = true
edition.workspace = true

[lib]
name = "zenith_launch"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
zip.workspace = true
zenith-core.workspace = true
zenith-store.workspace = true
